--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	</nav>
 	<!-------------Nav Bar End Here --------------------->
 	<div class="container text-center text-white card bg-primary">
-		<h1>Bank IFSC Codes SBI.Com</h1>
-		<p> <b>Find SBI Bank with Address like City, Branch, IFSC Code.</b> It is a very easy way to find your IFSC, MICR, Branch Code and every details of the SBI Branch you are looking for. Just type the Branch, City or Address, your IFSC Code will be visible in front of you.</p>
+		<h1>Find Banl With IFSC Code</h1>
+		<p> <b>Find SBI Bank with  IFSC Code.</b> It is a very easy way to find your IFSC, MICR, Branch Code and every details of the SBI Branch you are looking for. Just type the Branch, City or Address, your IFSC Code will be visible in front of you.</p>
 	</div>
 <div class="container card">
   <div class="row">
@@ -46,7 +46,7 @@
 <h2 class="text-center">FIND SBI BANK WITH BRANCH, CITY, IFSC CODE AND ADDRESS</h2>
 
  	<div>
-		<input class="form-control text-uppercase text-center" type="text" class="from-control" id="search" placeholder="Enter Branch, City, IFSC Code or Address">
+		<input class="form-control text-uppercase text-center" type="text" textlength="11" class="from-control" id="search" placeholder="Enter IFSC Code">
 	</div>
 	<div id="match-list">
 	</div>
