--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h2 class="text-center">FIND SBI BANK WITH BRANCH, CITY, IFSC CODE AND ADDRESS</h2>
 
  	<div>
-		<input class="form-control text-uppercase text-center" type="text" textlength="11" class="from-control" id="search" placeholder="Enter IFSC Code">
+		<input class="form-control text-uppercase text-center" type="text" maxlength="11" class="from-control" id="search" placeholder="Enter IFSC Code">
 	</div>
 	<div id="match-list">
 	</div>
